--- a/lesson2/css/design-principles.css
+++ b/lesson2/css/design-principles.css
@@ -5,12 +5,14 @@
 }
 header{
     display: grid;
-    grid-template-columns: 30% 70%;
+    grid-template-rows: 60% 40%;
     background-color: rgb(42, 5, 77);
     color: white;
     font-size: 24pt;
     text-align: center;
     align-items: center;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 main{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -25,4 +27,74 @@ footer{
 #datediv{
     color: yellow;
 
+}
+
+.min_head{
+    background-color: rgb(72, 18, 122);
+    color: white;
+    text-align: center;
+}
+
+section{
+    border: 3px;
+    background-color: #a7a6a8;
+    /* align-items: center;
+    justify-self: center;
+    align-self: center; */
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+}
+
+h3{
+    text-align: center;
+}
+
+h4{
+    text-align: center;
+}
+
+p{
+    text-align: center;
+}
+
+.img{
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    justify-self: center;
+    align-self: center;
+}
+.card{
+    display: grid;
+    grid-template-columns: 1fr;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    justify-self: center;
+    align-self: center;
+}
+
+main{
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+/* Tablet view */
+@media only screen and (min-width: 37.5em) {
+    main{
+        display: grid;
+        grid-template-columns: 1fr, 1fr;
+    }
+}
+
+/* Desktop view */
+@media only screen and (min-width: 60em) {
+    main {
+        display: grid;
+        grid-template-columns: 1fr, 1fr, 1fr;
+    }
 }
