--- a/lesson2/css/design-principles.css
+++ b/lesson2/css/design-principles.css
@@ -43,9 +43,11 @@ footer{
     text-align: center;
 }
 
-section{
+main section{
     background-color: #a7a6a8;
     margin: 0.5rem;
+    min-width: 1fr;
+    width: 100%;
 }
 
 h3{
@@ -75,6 +77,9 @@ p{
     main{
         grid-template-columns: 1fr, 1fr;
     }
+    main section{
+        width: 50%;
+    }
     main section:nth-child(3) {
         grid-column: span 2;
     }
@@ -87,9 +92,13 @@ p{
 }
 
 /* Desktop view */
-@media only screen and (min-width: 60em) {
+@media only screen and (min-width: 750px) {
     main {
         grid-template-columns: 1fr, 1fr, 1fr;
+    }
+    main section{
+        width: 33%;
+        float: left;
     }
     main section:nth-child(3){
         grid-column: span 1;
