--- a/lesson2/css/design-principles.css
+++ b/lesson2/css/design-principles.css
@@ -19,8 +19,9 @@ main{
     margin: 0 auto;
     /* width: 70%; */
     /* max-width: 767px; */
-    display: grid;
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-wrap: wrap;
+    
     
     
 }
@@ -50,6 +51,16 @@ main section{
     width: 100%;
 }
 
+main section:nth-child(1){
+    flex: 100%;
+}
+main section:nth-child(2){
+    flex: 100%;
+}
+main section:nth-child(3){
+    flex: 100%;
+}
+
 h3{
     text-align: center;
 }
@@ -74,14 +85,14 @@ p{
 
 /* Tablet view */
 @media screen and (min-width: 37.5em) {
-    main{
-        grid-template-columns: 1fr, 1fr;
+    main section:nth-child(1) {
+        flex: 50%;
     }
-    main section{
-        width: 50%;
+    main section:nth-child(2) {
+        flex: 50%;
     }
     main section:nth-child(3) {
-        grid-column: span 2;
+        flex: 100%;
     }
     header{
         width: 50%;
@@ -92,16 +103,15 @@ p{
 }
 
 /* Desktop view */
-@media only screen and (min-width: 750px) {
-    main {
-        grid-template-columns: 1fr, 1fr, 1fr;
+@media only screen and (min-width: 1025px) {
+    main section:nth-child(1) {
+        flex: 33%;
     }
-    main section{
-        width: 33%;
-        float: left;
+    main section:nth-child(2) {
+        flex: 33%;
     }
-    main section:nth-child(3){
-        grid-column: span 1;
+    main section:nth-child(3) {
+        flex: 33%;
     }
     header{
         width: 50%;
