--- a/lesson2/css/design-principles.css
+++ b/lesson2/css/design-principles.css
@@ -103,7 +103,7 @@ p{
 }
 
 /* Desktop view */
-@media only screen and (min-width: 1025px) {
+@media only screen and (min-width: 60em) {
     main section:nth-child(1) {
         flex: 33%;
     }
