--- a/lesson3/css/main.css
+++ b/lesson3/css/main.css
@@ -42,6 +42,10 @@ main{
     background-color: rgb(21, 21, 21);
     color: white;
     text-align: center;
+    /* align-content: center; */
+    /* justify-content: center; */
+    /* justify-items: center; */
+    /* align-items: center; */
     
 }
 
@@ -61,6 +65,7 @@ h2{
     color: #f05545;
     font-size: 16pt;
 }
+
 
 
 
