--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -9,6 +9,8 @@ header p{
     background-color: #212121;
     color: #fff;
     column-span: all;
+    text-align: center;
+    align-self: center;
 }
 
 
@@ -75,23 +77,114 @@ main div{
 
 .hero{
     grid-area: hero;
+    position: relative;
 }
+.title{
+    grid-area: t;
+    text-align: center;
+    color: #f05545;
+}
+.village{
+    width: 100%;
+    height: 100%;
+}
+.h{
+    position: absolute;
+    top: -1px;
+    left: 20px;
+    color: #000;
+}
+.herobtn{
+    position: absolute;
+    bottom: 2px;
+    right: 20px;
+    font-size: 20px;
+    background-color: #7F0000;
+    border-radius: 10%;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
 .event{
     grid-area: event;
 }
+
 .weather{
     grid-area: weather;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+    "t t"
+    "w wt"
+    "wf wf"
+    "ws1 ws2"
+    "wc1 wc2";
 }
+.w{
+    grid-area: w;
+    text-align: center;
+}
+.temp{
+    grid-area: wt;
+    text-align: center;
+    justify-content: center;
+    font-size: 40px;
+}
+.wf{
+    grid-area: wf;
+    text-align: right;
+}
+.ws1{
+    grid-area: ws1;
+    text-align: center;
+}
+.ws2{
+    grid-area: ws2;
+    text-align: center;
+}
+.wc1{
+    grid-area: wc1;
+    text-align: center;
+}
+.wc2{
+    grid-area: wc2;
+    text-align: center;
+}
+
 .news{
     grid-area: news;
 }
+
 .spotlight{
     grid-area: spot;
 }
+.si{
+    text-align: center;
+    align-self: center;
+    align-items: center;
+    align-content: center;
+    margin: 0 25%;
+}
+.spotlight p{
+    text-align: center;
+}
+
 .join{
     grid-area: join;
     display: none;
 }
+.joint{
+    background-color: #7F0000;
+    border-radius: 10%;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;
+}
+
 .f1{
     grid-area: f1;
 }
@@ -103,12 +196,16 @@ main div{
 .s3{
     display: none;
     grid-area: s3;
+    border: 3px solid rgb(240, 86, 69);
 }
 .s1{
     grid-area: s1;
+    display: block;
+    border: 3px solid rgb(240, 86, 69);
 }
 .s2{
     grid-area: s2;
+    border: 3px solid rgb(240, 86, 69);
 }
 
 header{
