--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -81,8 +81,8 @@ main div{
 }
 
 .village{
-    /* width: 100%;
-    height: 100%; */
+    width: 100%;
+    height: 100%;
 }
 .herot{
     position: absolute;
