--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -13,53 +13,6 @@ header p{
     align-self: center;
 }
 
-
-nav {
-	margin: 0 auto;
-	max-width: 760px;
-    position: absolute;
-    top: 40px;
-    right: 5px;
-	background-color: rgb(127, 0, 0);
-}
-nav ul{
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-nav button{
-    margin: .2rem 2vw;
-    background: transparent;
-    border: none;
-    font-size: 2rem;
-    color: #000;
-}
-nav ul li a{
-    display: block;
-    padding: .8rem 2vw;
-    text-decoration: none;
-    display: block;
-    border-top: 1px solid rgba(0,0,0,0.5);
-    color: #fff;
-}
-
-nav ul li.active a{
-    background-color: rgba(0,0,0,0.2);
-    color: #fff;
-}
-nav ul li a:hover{
-    background-color: rgb(0, 0, 0, 0.3);
-}
-
-nav ul{display: none;}
-nav ul.open{display: block;}
-
-#hambugerBtn span:nth-child(1) {display: block;}
-#hambugerBtn span:nth-child(2) {display: none;}
-
-#hambugerBtn.open span:nth-child(2) {display: block;}
-#hambugerBtn.open span:nth-child(1) {display: none;}
-
 div{
     background-color: rgb(0, 0, 0);
     color: white;
@@ -78,11 +31,12 @@ main div{
 .hero{
     grid-area: hero;
     position: relative;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .village{
-    width: 100%;
-    height: 100%;
+    width:100%;
 }
 .herot{
     position: absolute;
@@ -93,7 +47,7 @@ main div{
 }
 .herobtn{
     position: absolute;
-    bottom: 2px;
+    bottom: 22px;
     right: 20px;
     font-size: 20px;
     background-color: #7F0000;
@@ -131,7 +85,7 @@ main div{
 }
 .wf{
     grid-area: wf;
-    text-align: right;
+    text-align: center;
 }
 .ws1{
     grid-area: ws1;
@@ -158,14 +112,18 @@ main div{
     grid-area: spot;
 }
 .si{
+    display: block;
     text-align: center;
     align-self: center;
     align-items: center;
     align-content: center;
-    margin: 0 25%;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 .spotlight p{
     text-align: center;
+    padding: 0px;
 }
 
 .join{
@@ -194,15 +152,18 @@ main div{
     display: none;
     grid-area: s3;
     border: 3px solid rgb(240, 86, 69);
+    padding:0px;
 }
 .s1{
     grid-area: s1;
     display: block;
     border: 3px solid rgb(240, 86, 69);
+    padding:0px;
 }
 .s2{
     grid-area: s2;
     border: 3px solid rgb(240, 86, 69);
+    padding:0px;
 }
 
 header{
@@ -306,6 +267,54 @@ a{
     color: #f05545;
 }
 
+nav {
+	margin: 0 auto;
+	max-width: 760px;
+    position: absolute;
+    top: 40px;
+    right: 5px;
+	background-color: rgb(127, 0, 0);
+    z-index: 1;
+}
+nav ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+nav button{
+    margin: .2rem 2vw;
+    background: transparent;
+    border: none;
+    font-size: 2rem;
+    color: #000;
+}
+nav ul li a{
+    display: block;
+    padding: .8rem 2vw;
+    text-decoration: none;
+    display: block;
+    border-top: 1px solid rgba(0,0,0,0.5);
+    color: #fff;
+}
+
+nav ul li.active a{
+    background-color: rgba(0,0,0,0.2);
+    color: #fff;
+}
+nav ul li a:hover{
+    background-color: rgb(0, 0, 0, 0.3);
+}
+
+nav ul{display: none;}
+nav ul.open{display: block;}
+
+#hambugerBtn span:nth-child(1) {display: block;}
+#hambugerBtn span:nth-child(2) {display: none;}
+
+#hambugerBtn.open span:nth-child(2) {display: block;}
+#hambugerBtn.open span:nth-child(1) {display: none;}
+
+
 /* Tablet view */
 @media screen and (min-width: 35rem) {
     nav button{
@@ -385,6 +394,7 @@ a{
         grid-template-columns: 1fr 1fr;
         grid-template-areas: 
         "s1 s2";
+
     }
     .info{
         display: grid;
@@ -404,6 +414,10 @@ a{
         height: 120px;
         width: 120px;
     }
+    /* .village{
+        width:720px;
+        
+    } */
     /* .social{
         display: grid;
         grid-template-columns: 1fr;
@@ -420,7 +434,7 @@ a{
 
     main{
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 22% 28% 28% 22%;
         grid-template-areas: 
         "event hero hero spot"
         "weather hero hero spot"
@@ -468,6 +482,7 @@ a{
         "s1"
         "s2"
         "s3";
+        padding: 0px;
     }
 
     .info{
@@ -488,5 +503,20 @@ a{
         height: 120px;
         width: 120px;
     }
-    
+    .village{
+        /* width:520px;
+        height: 955px; */
+        width: 100%;
+        height: 100%;
+    }
+    .herobtn{
+        bottom: 20px;
+        right: 25px;
+    }
+    .temp{
+    padding: 0px;
+    }
+    .weather{
+        padding: 0px;
+    }
 }
