--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -37,6 +37,12 @@ main div{
 
 .village{
     width:100%;
+    margin: auto, auto;
+    padding: auto;
+}
+.heroimg{
+    margin: auto;
+    padding: auto;
 }
 .herot{
     position: absolute;
@@ -44,6 +50,7 @@ main div{
     left: 20px;
     color: #000;
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.755);
 }
 .herobtn{
     position: absolute;
@@ -70,8 +77,8 @@ main div{
     "t t"
     "w wt"
     "wf wf"
-    "ws1 ws2"
-    "wc1 wc2";
+    "ws1 ws1"
+    "wc1 wc1";
 }
 .w{
     grid-area: w;
@@ -340,6 +347,7 @@ nav ul.open{display: block;}
         "hero hero hero"
         "news news news"
         "spot spot spot"
+        "join join join"
         "event event weather";
     }
 
@@ -384,7 +392,7 @@ nav ul.open{display: block;}
         align-content: center;
     }
     .join{
-        display: none;
+        display: block;
     }
     .s3{
         display: none;
