--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -384,7 +384,6 @@ label.myinput input :required{
     display: grid;
     grid-template-columns: 1fr;
 }
-/* directory things */
 #listview{
     display: none;
     margin-bottom: 10px;
@@ -408,6 +407,9 @@ label.myinput input :required{
 table{
     margin-left: 10%;
     margin-right: 10%;
+}
+.direcmain section div img{
+    width: 100px;
 }
 
 /* Tablet view */
