--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -37,12 +37,12 @@ main div{
 
 .village{
     width:100%;
-    margin: auto, auto;
-    padding: auto;
+    margin: auto auto;
+    /* padding: auto; */
 }
 .heroimg{
     margin: auto;
-    padding: auto;
+    /* padding: auto; */
 }
 .herot{
     position: absolute;
@@ -410,6 +410,8 @@ table{
 }
 .direcmain section div img{
     width: 100px;
+    max-height: 100px;
+    max-width: 100px;
 }
 
 
