--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -495,6 +495,10 @@ button {
 .moveDown {
     margin-top: 3em;
 }
+/* discover stuff */
+#visit{
+    column-span: 1/5;
+}
 
 /* Tablet view */
 @media screen and (min-width: 35rem) {
@@ -624,8 +628,16 @@ button {
         display: block;
     } 
     #listview section{
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     } 
+    .board{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .board h3{
+        column-span: 1/4;
+    }
 }
 
 /* Desktop view */
