--- a/final/css/main.css
+++ b/final/css/main.css
@@ -6,6 +6,9 @@
 h1 h2 h3{
     font-family: 'Audiowide', cursive;
 }
+h2{
+    color: #080b5d;
+}
 a{
     text-decoration: none;
 }
@@ -16,25 +19,30 @@ a{
 header{
     background-color: #29b6f6;
     font-family: 'Audiowide', cursive;
+    padding-bottom: 7px;
     
 }
 .hl{
     padding: 10px;
+}
+.logo{
+    margin-top: 5px;
 }
 /* end header */
 
 /* nav */
 .hn li{
     background-color: #ba000d;
-    color: black;
+    color: #29b6f6;
     text-decoration: none;
     text-align: center;
 }
 .hn li a{
     background-color: #ba000d;
-    color: black;
+    color: white;
     text-decoration: none; 
     text-align: center;
+    margin-bottom: 10px;
 }
 nav ul{
     list-style-type: none;
@@ -70,23 +78,168 @@ nav ul.open{display: block;}
 /* end nav */
 
 
+/* Main */
+/* home */
+#home{
+    display: block;
+}
+#home div{
+    border: 3px #ba000d solid;
+    margin: 5px 10px;
+}
+#home div .temp{
+    border: none;
+}
+#home h2{
+    color: #080b5d;
+}
+#horder{
+    background-color: #29b6f6;
+    color: black;
+    width: 80%;
+    margin: 0px auto 5px auto;
+    border: 4px #ba000d solid;
+}
+/* end home */
+/* order */
+#order div{
+    border: 3px #ba000d solid;
+    margin: 5px 10px;
+}
+.formtitle{
+    color: #080b5d;
+}
+.mysubmit{
+    background-color: #ba000d;
+    color: white;
+    margin-bottom: 5px;
+}
+#information{
+    text-align: left;
+}
+#information section{
+    margin-left: 25%;
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
+.email{
+    margin-left: 33px;
+}
+.lname{
+    margin-left: 2px;
+}
+/* end order */
+/* thanks */
+#thanks div{
+    border: 3px #ba000d solid;
+    margin: 5px 10px;
+}
+/* end main */
+
+
 /* footer */
 footer{
     background-color: #29b6f6;
+    margin-top: 5px;
 }
-
+.flogo{
+    margin-top: 5px;
+}
+.foot_img{
+    margin: 5px;
+}
+.f1{
+    margin-top: 5px;
+}
 
 
 
 /* Tablet view */
 @media screen and (min-width: 35rem) {
+    /* nav */
+    nav button{
+        display:none;
+    }
 
+    nav #primaryNav{
+        display:flex;
+        justify-content: center;
+        /* margin-left: 2vw; */
+        border-left: 1px solid rgba(0,0,0,0.3);
+        background-color: #29b6f6;
+    }
+
+    nav ul li a{
+        border: none;
+        border-right: 1px solid rgba(0,0,0,0.3);
+        margin: 1px 5px;
+        padding: 1px 3px;
+        background-color: #29b6f6;
+    }
+    .hn li{
+        background-color: #29b6f6;
+        
+    }
+    /* end nav */
+
+    /* main */
+    #hsale{
+        grid-area: hsale;
+    }
+    #hevent{
+        grid-area: hevent;
+    }
+    #weather{
+        grid-area: hweat;
+    }
+    #hbuy{
+        grid-area: hbuy;
+    }
+    #home{
+        display: grid;
+        grid-template-areas: 
+        "hsale hsale"
+        "hweat hevent"
+        "hbuy hbuy";
+    }
+    /* end home */
+    /* order */
+    #information{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        
+    }
+    #information section{
+        margin-left: 14%;
+    }
+    
 
 }
 /* end tablet */
 
 /* Desktop view */
 @media screen and (min-width: 64rem) {
-
+    /* main */
+    /* home */
+    #home{
+        grid-template-areas: 
+        "hsale hsale hsale"
+        "hweat hevent hbuy";
+    }
+    /* end home */
+    /* order */
+    #information{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        
+    }
+    #information section{
+        margin-left: 15%;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    #order div{
+        margin: 10px 10px;
+    }
 
 }
